--- a/_frontend/blocks/clients-carousel/style.scss
+++ b/_frontend/blocks/clients-carousel/style.scss
@@ -32,6 +32,12 @@
         &:after {
             right: -550px;
         }
+        &_bg {
+            background-color: #fff8dd;
+        }
+    }
+    &_about {
+        background-color: transparent;
     }
 }
 
