--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -37,3 +37,6 @@
 @import "trade-marks/style";
 @import "background-page/style";
 @import "text-brand/style";
+@import "text-about-company/style";
+@import "structure-company/style";
+@import "structure-company/style";
