--- a/_frontend/blocks/slider/style.scss
+++ b/_frontend/blocks/slider/style.scss
@@ -55,6 +55,20 @@
                 line-height: 28px;
                 font-weight: 800;
             }
+            &_font {
+                padding: 25px 20px 30px 25px;
+                width: 620px;
+                max-width: 620px;
+                @include media(md) {
+                    max-width: 100%
+                }
+                p {
+                    font-size: 20px;
+                    line-height: 28px;
+                    letter-spacing: 0.2px;
+                    margin-top: 0;
+                }
+            }
         }
         img {
             display: inline-block;
