--- a/css/style.css
+++ b/css/style.css
@@ -1378,6 +1378,36 @@ input[type="text"]:focus {
   font-weight: 700;
   line-height: 40px; }
 
+.h1_about-company {
+  color: #f6d34b;
+  font-size: 48px;
+  font-weight: 700;
+  text-align: center; }
+
+.h2_about-company {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  margin: 47px auto 30px; }
+  .h2_about-company_center {
+    text-align: center; }
+  .h2_about-company_mt {
+    margin-top: 0; }
+
+.h3_about-company {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0.24px; }
+  .h3_about-company_center {
+    text-align: center;
+    height: 50px;
+    margin-top: 95px;
+    margin-bottom: 15px; }
+    @media only screen and (max-width: 992px) {
+      .h3_about-company_center {
+        margin: 30px auto 10px; } }
+
 .button-white,
 .button-orange,
 .button-cheese {
@@ -1596,6 +1626,18 @@ input[type="text"]:focus {
         font-size: 21px;
         line-height: 28px;
         font-weight: 800; }
+      .slider__item__text_font {
+        padding: 25px 20px 30px 25px;
+        width: 620px;
+        max-width: 620px; }
+        @media only screen and (max-width: 758px) {
+          .slider__item__text_font {
+            max-width: 100%; } }
+        .slider__item__text_font p {
+          font-size: 20px;
+          line-height: 28px;
+          letter-spacing: 0.2px;
+          margin-top: 0; }
     .slider__item img {
       display: inline-block;
       margin-right: 40px;
@@ -2018,6 +2060,10 @@ input[type="text"]:focus {
     left: -550px; }
   .clients__carousel:after {
     right: -550px; }
+  .clients__carousel_bg {
+    background-color: #fff8dd; }
+  .clients_about {
+    background-color: transparent; }
 
 .clients-page-product {
   padding: 75px 0 100px;
@@ -2038,6 +2084,8 @@ input[type="text"]:focus {
   @media only screen and (max-width: 992px) {
     .popular {
       padding-bottom: 0; } }
+  .popular_pb {
+    padding-bottom: 0; }
   .popular__item {
     position: relative;
     color: #979695;
@@ -2341,6 +2389,23 @@ input[type="text"]:focus {
     left: -50px; }
   .random .row:after {
     right: -50px; }
+  .random_about {
+    background-color: transparent;
+    margin-top: 0;
+    padding-bottom: 60px; }
+    .random_about .row:before, .random_about .row:after {
+      display: none; }
+    .random_about__wrap:before, .random_about__wrap:after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      width: 450px;
+      height: 3px;
+      background-image: url("../images/point-line.png"); }
+    .random_about__wrap:before {
+      left: -550px; }
+    .random_about__wrap:after {
+      right: -550px; }
   .random__carousel {
     position: relative;
     margin: 5px;
@@ -2939,6 +3004,23 @@ input[type="text"]:focus {
       top: -40px; }
     .tm-carousel__carousel .arrows--next {
       bottom: -40px; }
+  .tm-carousel-horizontal__carousel {
+    padding-top: 10px; }
+    .tm-carousel-horizontal__carousel:before, .tm-carousel-horizontal__carousel:after {
+      content: '';
+      display: block;
+      top: 48px;
+      position: absolute;
+      z-index: 1;
+      width: 500px;
+      height: 2px;
+      background: #f6d34b; }
+    .tm-carousel-horizontal__carousel:before {
+      left: -550px; }
+    .tm-carousel-horizontal__carousel:after {
+      right: -550px; }
+    .tm-carousel-horizontal__carousel__item {
+      text-align: center; }
 
 .background-page-category {
   position: relative; }
@@ -3520,3 +3602,155 @@ input[type="text"]:focus {
   .text-brand__link a:hover {
     color: inherit;
     border-bottom: 2px solid #f6d34b; }
+
+.text-about-company {
+  padding: 30px 0;
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: 0.2px; }
+  .text-about-company_pb {
+    padding-bottom: 60px; }
+  .text-about-company__advantages {
+    padding-top: 15px; }
+    .text-about-company__advantages li:before {
+      content: "- "; }
+
+.structure-company {
+  margin-bottom: 50px; }
+  .structure-company__wrap {
+    padding: 0 15px;
+    position: relative; }
+    @media only screen and (max-width: 992px) {
+      .structure-company__wrap {
+        padding: 0; } }
+    .structure-company__wrap:before {
+      content: '';
+      display: block;
+      width: 16px;
+      height: 85px;
+      background: url("../images/structure-company/shape-1.png") no-repeat;
+      position: absolute;
+      top: -110px;
+      left: 50%; }
+      @media only screen and (max-width: 992px) {
+        .structure-company__wrap:before {
+          display: none; } }
+    .structure-company__wrap_pad-left {
+      padding-left: 0; }
+      .structure-company__wrap_pad-left:before {
+        left: auto;
+        right: 50px;
+        -webkit-transform: rotateZ(45deg);
+            -ms-transform: rotate(45deg);
+                transform: rotateZ(45deg); }
+    .structure-company__wrap_pad-right {
+      padding-right: 0; }
+      .structure-company__wrap_pad-right:before {
+        left: 50px;
+        -webkit-transform: rotateZ(-45deg);
+            -ms-transform: rotate(-45deg);
+                transform: rotateZ(-45deg); }
+    .structure-company__wrap_no-elem:before {
+      display: none; }
+  .structure-company__img {
+    text-align: center;
+    height: 117px;
+    overflow: hidden;
+    margin-bottom: 20px; }
+    .structure-company__img img {
+      width: 117px;
+      height: 117px; }
+    .structure-company__img_scale img {
+      -webkit-transform: scale(1.3);
+          -ms-transform: scale(1.3);
+              transform: scale(1.3); }
+    .structure-company__img_size {
+      height: 150px;
+      margin-bottom: 30px; }
+      .structure-company__img_size img {
+        width: 150px;
+        height: 130px; }
+  .structure-company p {
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.2px; }
+  .structure-company_direct {
+    margin-top: 70px; }
+    .structure-company_direct__more {
+      padding-top: 60px; }
+      .structure-company_direct__more__description p {
+        color: #979695;
+        font-size: 16px;
+        line-height: 18px; }
+      .structure-company_direct__more__button span {
+        padding: 0 40px; }
+
+.structure-company {
+  margin-bottom: 50px; }
+  .structure-company__wrap {
+    padding: 0 15px;
+    position: relative; }
+    @media only screen and (max-width: 992px) {
+      .structure-company__wrap {
+        padding: 0; } }
+    .structure-company__wrap:before {
+      content: '';
+      display: block;
+      width: 16px;
+      height: 85px;
+      background: url("../images/structure-company/shape-1.png") no-repeat;
+      position: absolute;
+      top: -110px;
+      left: 50%; }
+      @media only screen and (max-width: 992px) {
+        .structure-company__wrap:before {
+          display: none; } }
+    .structure-company__wrap_pad-left {
+      padding-left: 0; }
+      .structure-company__wrap_pad-left:before {
+        left: auto;
+        right: 50px;
+        -webkit-transform: rotateZ(45deg);
+            -ms-transform: rotate(45deg);
+                transform: rotateZ(45deg); }
+    .structure-company__wrap_pad-right {
+      padding-right: 0; }
+      .structure-company__wrap_pad-right:before {
+        left: 50px;
+        -webkit-transform: rotateZ(-45deg);
+            -ms-transform: rotate(-45deg);
+                transform: rotateZ(-45deg); }
+    .structure-company__wrap_no-elem:before {
+      display: none; }
+  .structure-company__img {
+    text-align: center;
+    height: 117px;
+    overflow: hidden;
+    margin-bottom: 20px; }
+    .structure-company__img img {
+      width: 117px;
+      height: 117px; }
+    .structure-company__img_scale img {
+      -webkit-transform: scale(1.3);
+          -ms-transform: scale(1.3);
+              transform: scale(1.3); }
+    .structure-company__img_size {
+      height: 150px;
+      margin-bottom: 30px; }
+      .structure-company__img_size img {
+        width: 150px;
+        height: 130px; }
+  .structure-company p {
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.2px; }
+  .structure-company_direct {
+    margin-top: 70px; }
+    .structure-company_direct__more {
+      padding-top: 60px; }
+      .structure-company_direct__more__description p {
+        color: #979695;
+        font-size: 16px;
+        line-height: 18px; }
+      .structure-company_direct__more__button span {
+        padding: 0 40px; }
