--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -39,4 +39,5 @@
 @import "text-brand/style";
 @import "text-about-company/style";
 @import "structure-company/style";
-@import "structure-company/style";
+@import "production-spinner_about/style";
+@import "production-spinner_about/style";
