--- a/_frontend/blocks/random/style.scss
+++ b/_frontend/blocks/random/style.scss
@@ -42,6 +42,9 @@
         background-color: transparent;
         margin-top: 0;
         padding-bottom: 60px;
+        &:before {
+            display: none;
+        }
         .row {
             &:before,
             &:after {
