--- a/_frontend/blocks/product-pagination/style.scss
+++ b/_frontend/blocks/product-pagination/style.scss
@@ -6,6 +6,9 @@
             padding: 20px 0 65px;
         }
     }
+    &_pb-10 {
+        padding-bottom: 10px;
+    }
     &__button {
         text-align: right;
         .button-cheese {
