--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -40,4 +40,5 @@
 @import "text-about-company/style";
 @import "structure-company/style";
 @import "production-spinner_about/style";
-@import "production-spinner_about/style";
+@import "direct-action/style";
+@import "direct-action/style";
