--- a/css/style.css
+++ b/css/style.css
@@ -1378,11 +1378,13 @@ input[type="text"]:focus {
   font-weight: 700;
   line-height: 40px; }
 
-.h1_about-company {
+.h1 {
   color: #f6d34b;
   font-size: 48px;
   font-weight: 700;
   text-align: center; }
+  .h1_mt-35 {
+    margin-top: 35px; }
 
 .h2_about-company {
   font-size: 40px;
@@ -1407,6 +1409,12 @@ input[type="text"]:focus {
     @media only screen and (max-width: 992px) {
       .h3_about-company_center {
         margin: 30px auto 10px; } }
+
+.text-direct {
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: 0.2px;
+  margin-bottom: 90px; }
 
 .button-white,
 .button-orange,
@@ -2930,6 +2938,9 @@ input[type="text"]:focus {
   @media only screen and (max-width: 992px) {
     .products-block {
       padding-top: 0; } }
+  .products-block_pt {
+    padding-top: 0;
+    margin-top: -60px; }
   .products-block__title {
     font-size: 40px;
     font-weight: 700;
@@ -2999,6 +3010,8 @@ input[type="text"]:focus {
     padding-top: 0; }
     .product-pagination_padding-20-65 {
       padding: 20px 0 65px; }
+  .product-pagination_pb-10 {
+    padding-bottom: 10px; }
   .product-pagination__button {
     text-align: right; }
     .product-pagination__button .button-cheese span {
@@ -3450,6 +3463,50 @@ input[type="text"]:focus {
               box-shadow: 0px 10px 30px 0px #aaa;
       -webkit-border-radius: 10px;
               border-radius: 10px; }
+  .product-use-carousel_4 {
+    position: relative;
+    margin: 66px 0 80px; }
+    .product-use-carousel_4__carousel:before, .product-use-carousel_4__carousel:after {
+      content: '';
+      display: block;
+      top: 50%;
+      position: absolute;
+      z-index: 1;
+      width: 500px;
+      height: 2px;
+      background: #f6d34b; }
+    .product-use-carousel_4__carousel:before {
+      left: -550px; }
+    .product-use-carousel_4__carousel:after {
+      right: -550px; }
+    .product-use-carousel_4__carousel__item {
+      background-color: transparent; }
+      .product-use-carousel_4__carousel__item img {
+        height: 200px; }
+      .product-use-carousel_4__carousel__item__wrap {
+        height: 356px;
+        margin: auto;
+        width: 250px;
+        -webkit-border-radius: 10px;
+                border-radius: 10px;
+        background-color: #fff;
+        -webkit-box-shadow: 0px 10px 15px 0px #aaa;
+                box-shadow: 0px 10px 15px 0px #aaa; }
+    .product-use-carousel_4 .slick-list {
+      height: 380px;
+      background-color: transparent; }
+
+.arrows--prev {
+  left: -40px; }
+
+.arrows--next {
+  right: -40px; }
+
+@media only screen and (max-width: 576px) {
+  .arrows--prev {
+    left: -20px; }
+  .arrows--next {
+    right: -20px; } }
 
 .background-page-product {
   position: relative; }
@@ -3610,7 +3667,7 @@ input[type="text"]:focus {
     @media only screen and (max-width: 1680px) {
       .background-page__butter_about {
         display: none; } }
-  .background-page__cheese-left-about {
+  .background-page__cheese-left_about {
     position: absolute;
     z-index: -1;
     left: 0;
@@ -3619,7 +3676,29 @@ input[type="text"]:focus {
     height: 586px;
     background: url("../images/background/cheese-left-about.png") no-repeat; }
     @media only screen and (max-width: 1680px) {
-      .background-page__cheese-left-about {
+      .background-page__cheese-left_about {
+        display: none; } }
+  .background-page__cheese-left_direction {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 30px;
+    width: 606px;
+    height: 562px;
+    background: url("../images/background/cheese-left_direction.png") no-repeat; }
+    @media only screen and (max-width: 1680px) {
+      .background-page__cheese-left_direction {
+        display: none; } }
+  .background-page__cheese-left-bottom_direction {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    bottom: 280px;
+    width: 213px;
+    height: 670px;
+    background: url("../images/background/cheese-left-bottom_direction.png") no-repeat; }
+    @media only screen and (max-width: 1680px) {
+      .background-page__cheese-left-bottom_direction {
         display: none; } }
   .background-page__block-left-top_brand {
     position: absolute;
@@ -3640,6 +3719,18 @@ input[type="text"]:focus {
     top: 650px;
     width: 100%;
     height: 30px;
+    -webkit-transform: skewY(20deg);
+        -ms-transform: skewY(20deg);
+            transform: skewY(20deg);
+    background-color: #f6d34b;
+    opacity: .2; }
+  .background-page__block-left-top_direction {
+    position: absolute;
+    z-index: -2;
+    left: 0px;
+    top: 390px;
+    width: 50%;
+    height: 120px;
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
@@ -3681,6 +3772,18 @@ input[type="text"]:focus {
             transform: skewY(20deg);
     background-color: #f6d34b;
     opacity: .2; }
+  .background-page__block-left-middle_direction {
+    position: absolute;
+    z-index: -2;
+    left: 0px;
+    top: 1220px;
+    width: 300px;
+    height: 170px;
+    -webkit-transform: skewY(20deg);
+        -ms-transform: skewY(20deg);
+            transform: skewY(20deg);
+    background-color: #f6d34b;
+    opacity: .2; }
   .background-page__block-left-middle-bottom_about {
     position: absolute;
     z-index: -2;
@@ -3705,6 +3808,18 @@ input[type="text"]:focus {
             transform: skewY(20deg);
     background-color: #f6d34b;
     opacity: .2; }
+  .background-page__block-left-bottom_direction {
+    position: absolute;
+    z-index: -2;
+    left: 0px;
+    bottom: -530px;
+    width: 100%;
+    height: 400px;
+    -webkit-transform: skewY(20deg);
+        -ms-transform: skewY(20deg);
+            transform: skewY(20deg);
+    background-color: #f6d34b;
+    opacity: .2; }
   .background-page__block-right_brand {
     position: absolute;
     z-index: -2;
@@ -3724,6 +3839,18 @@ input[type="text"]:focus {
     top: 400px;
     width: 370px;
     height: 420px;
+    -webkit-transform: skewY(20deg);
+        -ms-transform: skewY(20deg);
+            transform: skewY(20deg);
+    background-color: #f6d34b;
+    opacity: .2; }
+  .background-page__block-right-top_direction {
+    position: absolute;
+    z-index: -2;
+    right: 0px;
+    top: 300px;
+    width: 340px;
+    height: 270px;
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
@@ -3774,6 +3901,17 @@ input[type="text"]:focus {
     background: url("../images/background/cheese-right-about.png") no-repeat; }
     @media only screen and (max-width: 1660px) {
       .background-page__cheese-right_about {
+        display: none; } }
+  .background-page__cheese-right_direction {
+    position: absolute;
+    z-index: -2;
+    right: 0;
+    bottom: 1100px;
+    width: 319px;
+    height: 586px;
+    background: url("../images/background/cheese-right_direction.png") no-repeat; }
+    @media only screen and (max-width: 1660px) {
+      .background-page__cheese-right_direction {
         display: none; } }
   .background-page__top {
     position: absolute;
@@ -3899,11 +4037,14 @@ input[type="text"]:focus {
     .production-spinner_about {
       margin-bottom: 100px; } }
 
-.production-spinner_about {
-  margin-top: 80px;
-  margin-bottom: 145px; }
-  .production-spinner_about:after {
-    display: none; }
-  @media only screen and (max-width: 576px) {
-    .production-spinner_about {
-      margin-bottom: 100px; } }
+.direct-action {
+  padding: 18px 0 35px; }
+  .direct-action__img {
+    text-align: center;
+    padding-bottom: 30px; }
+
+.direct-action {
+  padding: 18px 0 35px; }
+  .direct-action__img {
+    text-align: center;
+    padding-bottom: 30px; }
