--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -65,6 +65,18 @@
                 display: none;
             }
         }
+        &_event {
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            top: 265px;
+            width: 327px;
+            height: 511px;
+            background: url('../images/background/cheese-left_event.png') no-repeat;
+            @media only screen and (max-width: 1680px) {
+                display: none;
+            }
+        }
     }
     &__cheese-left-bottom {
         &_direction {
@@ -109,6 +121,17 @@
             left: 0px;
             top: 390px;
             width: 50%;
+            height: 120px;
+            transform: skewY(20deg);
+            background-color: #f6d34b;
+            opacity: .2;
+        }
+        &_event {
+            position: absolute;
+            z-index: -1;
+            left: 0px;
+            top: 330px;
+            width: 33%;
             height: 120px;
             transform: skewY(20deg);
             background-color: #f6d34b;
@@ -162,6 +185,17 @@
             background-color: #f6d34b;
             opacity: .2;
         }
+        &_event {
+            position: absolute;
+            z-index: -1;
+            left: 0px;
+            bottom: 486px;
+            width: 270px;
+            height: 170px;
+            transform: skewY(20deg);
+            background-color: #f6d34b;
+            opacity: .2;
+        }
     }
     &__block-left-middle-bottom {
         &_about {
@@ -193,6 +227,17 @@
             z-index: -2;
             left: 0px;
             bottom: -530px;
+            width: 100%;
+            height: 400px;
+            transform: skewY(20deg);
+            background-color: #f6d34b;
+            opacity: .2;
+        }
+        &_event {
+            position: absolute;
+            z-index: -2;
+            left: 0px;
+            bottom: -555px;
             width: 100%;
             height: 400px;
             transform: skewY(20deg);
@@ -231,6 +276,17 @@
                 top: 300px;
                 width: 340px;
                 height: 270px;
+                transform: skewY(20deg);
+                background-color: #f6d34b;
+                opacity: .2;
+            }
+            &_event {
+                position: absolute;
+                z-index: -2;
+                right: 0px;
+                top: 300px;
+                width: 310px;
+                height: 295px;
                 transform: skewY(20deg);
                 background-color: #f6d34b;
                 opacity: .2;
@@ -296,6 +352,20 @@
             width: 319px;
             height: 586px;
             background: url('../images/background/cheese-right_direction.png') no-repeat;
+            @media only screen and (max-width: 1660px) {
+                display: none;
+            }
+        }
+    }
+    &__butter-right {
+        &_event {
+            position: absolute;
+            z-index: -2;
+            right: 0;
+            bottom: 750px;
+            width: 309px;
+            height: 400px;
+            background: url('../images/background/butter-right_event.png') no-repeat;
             @media only screen and (max-width: 1660px) {
                 display: none;
             }
