--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -41,4 +41,5 @@
 @import "structure-company/style";
 @import "production-spinner_about/style";
 @import "direct-action/style";
-@import "direct-action/style";
+@import "events/style";
+@import "events/style";
