--- a/_frontend/blocks/_element/style.scss
+++ b/_frontend/blocks/_element/style.scss
@@ -45,11 +45,12 @@
 }
 
 .h3 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0.24px;
     &_about-company {
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 28px;
-        letter-spacing: 0.24px;
+        @extend .h3;
         &_center {
             text-align: center;
             height: 50px;
@@ -63,9 +64,13 @@
 
 }
 
-.text-direct {
+.p {
     font-size: 20px;
     line-height: 28px;
     letter-spacing: 0.2px;
+}
+
+.text-direct {
+    @extend .p;
     margin-bottom: 90px;
 }
