--- a/_frontend/blocks/product-pagination/style.scss
+++ b/_frontend/blocks/product-pagination/style.scss
@@ -59,5 +59,9 @@
         &_center {
             text-align: center;
         }
+        &_right {
+            text-align: right;
+            margin: 0 30px 0 0;
+        }
     }
 }
